Remove unecessary methods
